finished all work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> HTML student Handbook </title>
-        <link rel = "icon" href = "link here."/>
+        <link rel = "icon" href = "https://www.bigfootdigital.co.uk/how-to-optimise-images"/>
     </head>
     <body>
         <h1> Section 1: Text & Headings </h1>
